--- a/TH/Khai-bao-su-dung-bien.html
+++ b/TH/Khai-bao-su-dung-bien.html
@@ -1,10 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Khai báo biến</title>
 </head>
 <body>
-$END$
+
+<script>
+    let i = 10;
+    let f = 20.5;
+    let b = true;
+    let s = "Hà Nội";
+
+    document.write("i = " + i + "<br>");
+    document.write("f = " + f + "<br>");
+    document.write("b = " + b + "<br>");
+    document.write("s = " + s + "<br>");
+</script>
+
 </body>
 </html>
