--- a/TH/area.html
+++ b/TH/area.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>area</title>
 </head>
 <body>
-$END$
+
+<script>
+    let width = 20;
+    let height = 10;
+    let area = width * height;
+    document.write("Area = " + area);
+</script>
+
 </body>
 </html>
